Ajustes dos componentes básicos

--- a/src/app/concurso/lista-concursos/lista-concursos.component.html
+++ b/src/app/concurso/lista-concursos/lista-concursos.component.html
@@ -1,4 +1,4 @@
-<p>Últimos concursos</p>
+<p>Lista de concursos</p>
 <table class="table table-striped">
     <thead>
         <th scope="col">Concurso</th>
