--- a/src/app/concurso/ultimo-concurso/ultimo-concurso.component.html
+++ b/src/app/concurso/ultimo-concurso/ultimo-concurso.component.html
@@ -1,2 +1,2 @@
-<h3>Concurso: {{ concurso?.numero }}</h3>
-<mgsn-dezenas-list [dezenas]='concurso?.dezenas' ></mgsn-dezenas-list>
+<h3>Último concurso: {{ concurso.numero }}</h3>
+<mgsn-dezenas-list [dezenas]='concurso.dezenas' ></mgsn-dezenas-list>
