--- a/src/app/concurso/ultimos-concursos/ultimos-concursos.component.html
+++ b/src/app/concurso/ultimos-concursos/ultimos-concursos.component.html
@@ -1,4 +1,4 @@
-<p>ultimos-concursos works!</p>
+<p>Últimos concursos</p>
 <table class="table table-striped">
     <thead>
         <th scope="col">Concurso</th>
