Adição de biblioteca de icones (Font Awesome) e pequenos ajustes estéticos

--- a/src/app/concurso/lista-concursos/lista-concursos.component.html
+++ b/src/app/concurso/lista-concursos/lista-concursos.component.html
@@ -9,8 +9,10 @@
         <tr *ngFor="let concurso of concursos">
             <td>{{concurso.numero}}</td>
             <td>{{concurso.dataSorteio}}</td>
-            <td>
-                <mgsn-dezenas-list [dezenas]='concurso.dezenas' ></mgsn-dezenas-list>
+            <td >
+                <div mgsnDarkenOnHover >
+                    <mgsn-dezenas-list [dezenas]='concurso.dezenas' ></mgsn-dezenas-list>
+                </div>
             </td>
         </tr>
     </tbody>
