--- a/src/app/dezenas/dezenas-list/dezenas-list.component.html
+++ b/src/app/dezenas/dezenas-list/dezenas-list.component.html
@@ -1,6 +1,6 @@
-
+<div>
 <ol class="list-unstyled">
-    <li *ngFor="let cols of rows" class="row">
+    <li *ngFor="let cols of rows" class="row no-gutters">
         <div class="col-7">
 
             <mgsn-dezena *ngFor="let dezena of cols" [dezena]="dezena">
@@ -9,5 +9,5 @@
 
     </li>
 </ol>
-
+</div>
 
